# shapr.github.io

./: 2019-06-01-recurse-two-weeks.org  LICENSE  about.html  about.rst  archive.html  atom.xml  contact.html  contact.markdown  default.nix  feed.rss  index.html  myblog.cabal  site.hs
css/: default.css
posts/: 2015-08-23-example.html  2017-07-09-first-post.html  2017-07-09-first-post.markdown  2019-05-01-recurse-center.html  2019-05-01-recurse-center.markdown  2019-05-02-org-mode.html  2019-05-02-org-mode.org  2019-05-11-xmonad.html  2019-05-11-xmonad.org  2019-05-21-mastermind-elisp.html  2019-05-21-mastermind-elisp.org  2019-05-31-markov-keyboard.html  2019-05-31-markov-keyboard.org  2019-06-01-recurse-two-weeks.html  2019-06-08-riscv-linux.html  2019-06-08-riscv-linux.org  2019-06-11-markov-rabbit-holes.html  2019-06-11-markov-rabbit-holes.org  2019-06-16-tmux-sparklines.html  2019-06-16-tmux-sparklines.org  2019-07-10-smt-solvers.html  2019-07-10-smt-solvers.org  2019-07-12-smt-solvers-part-two.html  2019-07-12-smt-solvers-part-two.org  2019-07-21-space-cadet.html  2019-07-21-space-cadet.org  2019-08-03-tympan.html  2019-08-03-tympan.org  2021-04-18-emacs-debugging.html  2021-04-18-emacs-debugging.org  2022-03-29-rc-again.html  2022-03-29-rc-again.org  2022-03-30-internet-social.html  2022-03-30-internet-social.org  2022-04-11-smt-solvers-part-three.html  2022-04-11-smt-solvers-part-three.org  2023-07-25-android-app-in-haskell.html  2023-07-25-android-app-in-haskell.org  2023-07-30-goldilocks-property-tests.html  2023-07-30-goldilocks-property-tests.org  (+2 more)
(+1 files in other folders)
