name:                myblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shapr/myblog#readme
license:             BSD3
license-file:        LICENSE
author:              Shae Erisson
maintainer:          shae@ScannedInAvian.com
copyright:           copyleft
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable myblog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
